--- a/serect.env
+++ b/serect.env
@@ -1,2 +1,4 @@
 DB_SOURCE=postgresql://root:secret@localhost:5432/tudu?sslmode=disable
 HTTP_SERVER_ADDRESS=0.0.0.0:8080
+TOKEN_SYMMETRIC_KEY=12345678901234567890123456789012
+ACCESS_TOKEN_DURATION=15m
